# cookiecutter-py-cli

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  README.rst  setup.cfg  tox.ini
{{ cookiecutter.repo_name }}/tests/: test_cli.py
