[metadata]
name = {{ cookiecutter.pypi_name }}
summary = {{ cookiecutter.project_short_description }}
description-file =
    README.rst
author = {{ cookiecutter.full_name }}
author-email = {{ cookiecutter.email }}
classifier =
    Environment :: Sproai
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    boogieclient
    aws

[files]
packages =
    {{ cookiecutter.pypi_name }}


[entry_points]
console_scripts =
    {{ cookiecutter.script_name }} = {{ cookiecutter.pypi_name }}.cli:main

[bdist_wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes = setup.py

[tool:pytest]
norecursedirs = build docs/_build *.egg .tox *.venv
addopts =
    --verbose --tb short --capture no
    --cov=boogie
    --cov-report=term-missing
    tests/

[flake8]
exclude = .git,__pycache__,dist,build,debian,*.egg,.tox,*.venv,og_tests,og_tests_new,tests_better,ez_setup.py,setup.py
ignore = E501,E123,E731,E402
